<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DangNhapActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline9">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/logo_android" />

        <EditText
            android:id="@+id/edtTenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:hint="@string/ten_dang_nhap"
            android:inputType="textPersonName"

            android:visibility="visible" />

        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#0DA8EE"
            android:gravity="center"
            android:onClick="XuLiDangNhap"
            android:text="@string/dang_nhap"
            android:textColor="#F5FFFBFB"
            android:textColorHighlight="#00F3ECEC"
            android:textColorHint="#FCF7F7"
            android:textColorLink="#FAFFFFFF" />

        <Button
            android:id="@+id/btnQuenMatKhau"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#DFAD36F8"
            android:gravity="center"
            android:onClick="XuLiQuenMatKhau"
            android:text="@string/quen_mat_khau"
            android:textColor="#EEFCF4F4" />

        <Button
            android:id="@+id/btnDangKi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#F3F10A0A"
            android:gravity="center"
            android:onClick="XuLiDangKi"
            android:text="@string/dang_ky"
            android:textColor="#EEF5EDED" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivIconFB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/fb" />

                <TextView
                    android:id="@+id/tvDangNhapVoiFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dang_nhap_voi_facebook" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivIcoGG"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/google" />

                <TextView
                    android:id="@+id/tvDangNHapVoiGG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dang_nhap_voi_google" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>